--- a/topic/folgen-und-bewertung/index.html
+++ b/topic/folgen-und-bewertung/index.html
@@ -20,7 +20,8 @@
                 <br>—> NS-Saat verletzt jedoch Artikel des Vatikans
             <br><br><br>Erhoffte Sonderstellung der katholischen Kirche wird nicht realisiert
                 <br>—> U.a. Konkordats widrige Verhaftungen  
-            <br><br><br>Papst Pius XII verfasst 1937 Enzyklika (Schreiben des Papstes) in dem er gegen Festnahmen protestiert 
+            <br><br><br><a href="https://www.dhm.de/lemo/biografie/papst-pius-xii.html">Papst Pius XII</a> verfasst 1937
+             <a href="https://www.dbk.de/themen/enzyklika-fratelli-tutti/">Enzyklika</a> (Schreiben des Papstes) in dem er gegen Festnahmen protestiert 
             </h2>
             <h1>- Bewertung -</h1>
             <p>
@@ -66,7 +67,7 @@
             - Artikel 7,9,13,16,22,27& 31 letzter Satz <br>—> Artikel, welche sonst nirgends (z.B.GG) beschrieben sind 
             </h2>
 
-            <h1><a href="/index.html">Nächstes Thema wählen</a></h1>
+            <h1><a href="/index.html" class="home">Nächstes Thema wählen</a></h1>
         </div>
         <div class="footer">
             <h1>Made by Mathis Kammer & Daniel Deuber</h1>
