--- a/topic/vertragsparteien-und-intentionen/index.html
+++ b/topic/vertragsparteien-und-intentionen/index.html
@@ -16,10 +16,10 @@
             <h1>- Die Vertragsparteien -</h1>
             <h1>Für den Vatikan:</h1>
             <img src="/img/IMG_3812.jpeg">
-            <p class="reduce-pad">Eugenio Pacelli, späterer Papst Pius XII.</p>
+            <p class="reduce-pad">Eugenio Pacelli, späterer <a href="https://www.dhm.de/lemo/biografie/papst-pius-xii.html">Papst Pius XII</a>.</p>
             <h1>Für die NS:</h1>
             <img src="/img/IMG_3811.png">
-            <p class="reduce-pad">Franz von Papen, Vize RK</p>
+            <p class="reduce-pad"><a href="https://www.dhm.de/lemo/biografie/franz-von-papen.html">Franz von Papen</a>, Vize RK</p>
             <h1>- Intention Vatikan -</h1>
             <h2>
                 Sicherung innerer Autonomie (=Selbstständigkeit) in Deutschland 
@@ -57,7 +57,7 @@
               Your browser does not support the audio element.
             </audio>
             
-            <h1><a href="/index.html">Nächstes Thema wählen</a></h1>
+            <h1><a href="/index.html" class="home">Nächstes Thema wählen</a></h1>
         </div>
         <div class="footer">
             <h1>Made by Mathis Kammer & Daniel Deuber</h1>
