--- a/topic/inhalt/index.html
+++ b/topic/inhalt/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="top-box">
             <div class="top-box-background"></div>
-            <img src="/img/IMG_0124.jpg" class="image">
+            <img src="/img/IMG_0124.JPG" class="image">
             <h1>Inhalt (Auswahl)</h1>
         </div>
         <div class="main">
