Added two new Glossar Links

--- a/topic/vertragsparteien-und-intentionen/index.html
+++ b/topic/vertragsparteien-und-intentionen/index.html
@@ -38,7 +38,7 @@
                 <br><br><br>
                 Neutralisierung des pol. Katholizismus 
                 <br><br><br>
-                Außenpolitisches Interesse (erster außenpolitischer Vertrag des NS-Staats)   
+                <a href="https://www.dhm.de/lemo/kapitel/ns-regime/aussenpolitik.html">Außenpolitisches</a> Interesse (erster außenpolitischer Vertrag des NS-Staats)   
                 <br><br><br>
                 Antibolschewistischer Vertrag (=Gegen Bolschewismus(allgemeinen Kommunismus/Marxismus) richtend) 
             </h2>
