--- a/topic/vertragsparteien-und-intentionen/index.html
+++ b/topic/vertragsparteien-und-intentionen/index.html
@@ -48,7 +48,7 @@
             <h1 class="reduce-pad">Audios</h1>
             <h2 class="audio">Ansprache im Reichstag</h2>
             <audio controls>
-                <source src="/img/Ansprache im Reichstag.mp3" type="audio/mpeg">
+                <source src="/img/Ansprache-im-Reichstag.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
             <h2 class="audio">Rundfunkrede von Adolf Hitler aus Bayreuth zu den evangelischen Kirchenwahlen am 23. Juli - Auszug 2</h2>
